# gurobi-setup

./: .gitignore  README.md
aircraft-passenger-sizing-simple/: .gitignore  CMakeLists.txt
cli-scripts/: coins.lp
docs/: README.md
gurobi-cpp/: CMakeLists.txt  README.md  example.cpp
